# esp32

./: LICENSE  NOTES.md  README.md
blink/: README.md
blink/main/: blink.c
fanc/: CMakeLists.txt  Makefile  README.md  sdkconfig
fanc/main/: CMakeLists.txt  fanc.cpp  fanc.h  fanc_main.cpp  fanc_server.cpp  index.html
hello_world/main/: hello_world_main.c
led_strip/: sdkconfig
led_strip/main/: led_strip_main.c
ledc/: README.md  sdkconfig
ledc/components/FastLED-idf/: ESP-IDF.md  FastLED.h
ledc/components/WiFiMulti-idf/: CMakeLists.txt  Kconfig  WiFiMulti-idf.c
ledc/main/: CMakeLists.txt  index.html  ledc.cpp  ledc.h  ledc_main.cpp  ledc_server.cpp
ledc2/: CMakeLists.txt  Makefile  README.md  sdkconfig
ledc2/components/WiFiMulti-idf/: LICENSE
ledc2/components/WiFiMulti-idf/include/: WiFiMulti-idf.h
ledc2/components/led_strip/include/: led_strip.h
ledc2/components/led_strip/src/: led_strip_rmt_ws2812.c
ledc2/main/: ledc.cpp  ledc_main.cpp  ledc_server.cpp
scan/main/: scan.c
sign/: CMakeLists.txt  Makefile  README.md  sdkconfig
wifi_station/: sdkconfig
wifi_station/main/: CMakeLists.txt  wifi_station_main.c
